--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "atomic_web_push"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["hsng95@gmail.com"]
 description = "A library that eliminates potential risks (occasional crashes due to OpenSSL library's setenv conflicts in Linux environments) from the web push library"
 homepage = "https://github.com/rabbitson87/atomic_web_push"
@@ -43,7 +43,8 @@ generic-array = "1.2.0"
 thiserror = "2.0.11"
 anyhow = "1.0.95"
 signature = "2.2.0"
-ece = { version = "2.3.1", default-features = false }
+aes-gcm = "0.10.3"
+hkdf = "0.12.4"
 
 reqwest = { version = "0.12.12", features = [
     "json",
@@ -65,3 +66,6 @@ wasi-abi2 = ["coarsetime/wasi-abi2"]
 [dev-dependencies]
 regex = "1.11.1"
 lazy_static = "1.5.0"
+base64ct = { version = "1.6.0", features = ["alloc", "std"] }
+once_cell = "1.20.2"
+p256 = { version = "0.13.2", features = ["ecdh"] }
