--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "atomic_web_push"
-version = "0.1.7"
+version = "0.2.0"
 authors = ["hsng95@gmail.com"]
 description = "A library that eliminates potential risks (occasional crashes due to OpenSSL library's setenv conflicts in Linux environments) from the web push library"
 homepage = "https://github.com/rabbitson87/atomic_web_push"
@@ -45,6 +45,8 @@ anyhow = "1.0.95"
 signature = "2.2.0"
 aes-gcm = "0.10.3"
 hkdf = "0.12.4"
+ece = { version = "2.3.1", default-features = false }
+num-traits = "0.2.19"
 
 reqwest = { version = "0.12.12", features = [
     "json",
@@ -69,3 +71,7 @@ lazy_static = "1.5.0"
 base64ct = { version = "1.6.0", features = ["alloc", "std"] }
 once_cell = "1.20.2"
 p256 = { version = "0.13.2", features = ["ecdh"] }
+tokio = { version = "1.43.0", default-features = false, features = [
+    "test-util",
+    "macros",
+] }
